--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -56,13 +56,13 @@ Alemannischen Gedichte:
 Allemannischen Gedichte:
   author: Hebel, Johann Peter
   references:
-    JPH G:
-    - start: 532
-      suffix: f
     HF:
     - start: 134
       suffix: f
     - start: 137
+      suffix: f
+    JPH G:
+    - start: 532
       suffix: f
   type: w
 Allgemeine Betrachtung über das Weltgebäude:
@@ -888,6 +888,7 @@ Darwinismus:
     - start: 384
 Das Gewitter:
   author: Hebel, Johann Peter
+  parent: Allemannischen Gedichte
   references:
     JPH Z:
     - end: 511
@@ -1079,6 +1080,7 @@ Der Mensch im Weltalter des Ausgleichs:
   type: w
 Der Sommerabend:
   author: Hebel, Johann Peter
+  parent: Allemannischen Gedichte
   references:
     HF:
     - start: 145
@@ -1182,6 +1184,7 @@ Dichtung:
     - start: 146
 Die Vergänglichkeit:
   author: Hebel, Johann Peter
+  parent: Allemannischen Gedichte
   references:
     JPH Z:
     - end: 509
@@ -1305,13 +1308,13 @@ Entzug:
     - start: 165
 Erde:
   references:
-    JPH G:
-    - end: 532
-      start: 530
     HF:
     - start: 134
     - start: 139
     - start: 150
+    JPH G:
+    - end: 532
+      start: 530
     SvG:
     - start: 189
   related:
@@ -1674,11 +1677,11 @@ Goethe, Johann Wolfgang von:
   metadata:
     gnd: '118540238'
   references:
-    JPH G:
-    - start: 532
     HF:
     - start: 145
     - start: 149
+    JPH G:
+    - start: 532
     SvG:
     - start: 181
     - start: 185
@@ -1820,6 +1823,7 @@ Grundverhältnis:
   - Grundverhalten
 Gute Antwort:
   author: Hebel, Johann Peter
+  parent: Schatzkästlein des rheinischen Hausfreundes
   references:
     JPH Z:
     - start: 498
@@ -1863,10 +1867,6 @@ Hebel, Johann Peter:
     GA 13:
     - start: 117
       suffix: f
-    JPH G:
-    - start: 530
-    - end: 533
-      start: 532
     HF:
     - end: 138
       start: 133
@@ -1876,6 +1876,10 @@ Hebel, Johann Peter:
     - end: 148
       start: 147
     - start: 150
+    JPH G:
+    - start: 530
+    - end: 533
+      start: 532
   type: p
 Hegel, Georg Wilhelm Friedrich:
   metadata:
@@ -1991,12 +1995,12 @@ Herstellen:
     - start: 288
 Himmel:
   references:
-    JPH G:
-    - end: 532
-      start: 530
     HF:
     - start: 139
     - start: 150
+    JPH G:
+    - end: 532
+      start: 530
   related:
   - Theologische Schriften 3, Gebet 3
   - Äther
@@ -2474,10 +2478,6 @@ Meister Eckhart:
   type: p
 Mensch:
   references:
-    JPH G:
-    - end: 532
-      start: 530
-      suffix: f
     GA 18:
     - start: 18
     - start: 21
@@ -2499,6 +2499,10 @@ Mensch:
     - start: 21
       suffix: f
     - start: 24
+    JPH G:
+    - end: 532
+      start: 530
+      suffix: f
     SvG:
     - start: 176
     - start: 189
@@ -3685,9 +3689,6 @@ Sprache:
     GA 13:
     - start: 117
       suffix: f
-    JPH G:
-    - start: 531
-    - start: 532
     GA 18:
     - start: 20
       suffix: f
@@ -3702,6 +3703,9 @@ Sprache:
       start: 138
     - end: 150
       start: 147
+    JPH G:
+    - start: 531
+    - start: 532
     WD:
     - start: 274
 Sprachgeist:
@@ -3862,10 +3866,10 @@ Theologische Schriften 3, Gebet 3:
     G:
     - start: 521
     - start: 529
-    JPH G:
-    - start: 530
     HF:
     - start: 150
+    JPH G:
+    - start: 530
   type: w
 Theophrastus:
   references:
