Lemmata ‘Die Sprache Johann Peter Hebel’

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -2649,6 +2649,8 @@ Mundart:
     GA 13:
     - start: 117
       suffix: f
+    - start: 124
+      suffix: f
 Mussolini, Benito:
   references:
     Sch:
@@ -3714,6 +3716,8 @@ Sprache:
     GA 13:
     - start: 117
       suffix: f
+    - start: 124
+      suffix: f
     GA 18:
     - start: 20
       suffix: f
@@ -4776,6 +4780,8 @@ bodenständig:
     G:
     - start: 521
       suffix: f
+    GA 13:
+    - start: 125
     GA 29/30:
     - start: 431
 causa:
