--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -280,6 +280,7 @@ Artemis:
     - start: 10
     - end: 27
       start: 25
+    - start: 33
   related:
   - Act. Apost. XIX, 34
   type: p
@@ -659,6 +660,8 @@ DK 22B1:
     EM:
     - start: 136
     - start: 137
+    GA 55:
+    - start: 38
     WBPh:
     - start: 277
   related:
@@ -1278,6 +1281,11 @@ Die Wiese:
     HF:
     - start: 134
   type: w
+Diels, Hermann:
+  references:
+    GA 55:
+    - start: 37
+  type: p
 Ding:
   references:
     EM:
@@ -1636,6 +1644,8 @@ Geheimnis:
     - start: 169
 Geist:
   references:
+    GA 55:
+    - start: 40
     WBPh:
     - start: 241
 Gelassenheit:
@@ -1984,6 +1994,11 @@ Hegel, Georg Wilhelm Friedrich:
     - start: 82
     - start: 305
       suffix: f
+    GA 55:
+    - end: 30
+      start: 28
+    - start: 40
+      suffix: f
     HF:
     - start: 137
     SA:
@@ -2156,6 +2171,9 @@ Hölderlin, Friedrich:
   references:
     GA 1:
     - start: 56
+    GA 55:
+    - start: 30
+      suffix: f
     SvG:
     - start: 154
     WBPh:
@@ -4629,6 +4647,10 @@ Wie wenn am Feiertage...:
   type: w
 Wille:
   references:
+    GA 55:
+    - start: 31
+      suffix: f
+    - start: 41
     WD:
     - start: 278
     - start: 279
@@ -4731,6 +4753,12 @@ Zoologie:
     - start: 310
   related:
   - Tier
+Zu-denken:
+  references:
+    GA 55:
+    - start: 28
+    - start: 38
+      suffix: f
 Zugänglichkeit des Lebendiges:
   references:
     GA 29/30:
@@ -5471,6 +5499,8 @@ wesentliche Möglichkeit des Seins:
       start: 132
     GA 29/30:
     - start: 41
+    GA 55:
+    - start: 42
     SvG:
     - start: 160
     - start: 161
@@ -5514,6 +5544,8 @@ wesentliche Möglichkeit des Seins:
     - end: 42
       start: 40
     - start: 44
+    GA 55:
+    - start: 40
     GA 63:
     - start: 21
     SA:
@@ -6085,6 +6117,8 @@ wesentliche Möglichkeit des Seins:
     GA 55:
     - start: 19
     - start: 27
+    - start: 32
+    - start: 40
 ῥυθμός:
   references:
     WBPh:
